--- a/notebook.html
+++ b/notebook.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
     <title>Notebook</title>
+    <style>
+        .purple-class {color: rgb(144, 0, 255);}
+        .center {
+            text-align: center;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
-    <header>
+    <header class="center">
         Notebook
     </header>
 
     <section>
-        <form name="notes" method="post">
+        <form name="notes" method="post" class="purple-class center">
             <input type="text">
             <button type = "submit">Write</button>
         </form>
